After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 672561 - Call window preview drop placeholder should not be red
Call window preview drop placeholder should not be red
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: VoIP
3.3.x
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2012-03-21 15:04 UTC by Cosimo Cecchi
Modified: 2012-03-27 13:16 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screenshot (221.44 KB, image/png)
2012-03-21 15:04 UTC, Cosimo Cecchi
  Details
rounded-rectangle: cairo_set_source_rgba() takes [0..1] arguments (1.63 KB, patch)
2012-03-22 17:22 UTC, Cosimo Cecchi
committed Details | Review
call-window: use colors from the theme for placeholders (2.55 KB, patch)
2012-03-22 17:22 UTC, Cosimo Cecchi
committed Details | Review
how it looks (108.20 KB, image/png)
2012-03-22 17:24 UTC, Cosimo Cecchi
  Details

Description Cosimo Cecchi 2012-03-21 15:04:05 UTC
It should use a border color from the theme instead of plain red.
Comment 1 Cosimo Cecchi 2012-03-21 15:04:28 UTC
Created attachment 210249 [details]
screenshot
Comment 2 Guillaume Desmottes 2012-03-22 07:49:49 UTC
Which color would you use?
Comment 3 Cosimo Cecchi 2012-03-22 17:22:45 UTC
Created attachment 210357 [details] [review]
rounded-rectangle: cairo_set_source_rgba() takes [0..1] arguments

Fix a bug in the way EmpathyRoundedRectangle sets the cairo color.
This was not visible because only pure colors (red and black) were used by EmpathyCallWindow.
Comment 4 Cosimo Cecchi 2012-03-22 17:22:50 UTC
Created attachment 210358 [details] [review]
call-window: use colors from the theme for placeholders

Use color shades from the color theme for preview placeholders, instead
of hardcoding black/red.
Comment 5 Cosimo Cecchi 2012-03-22 17:24:29 UTC
Created attachment 210359 [details]
how it looks

This is how it looks with current Adwaita.
Comment 6 Guillaume Desmottes 2012-03-23 09:13:21 UTC
Review of attachment 210357 [details] [review]:

++
Comment 7 Guillaume Desmottes 2012-03-23 09:15:00 UTC
Review of attachment 210358 [details] [review]:

++
Comment 8 Guillaume Desmottes 2012-03-23 09:16:10 UTC
Not sure if this is worth a freeze exception request; maybe we can merge this after the 3.4.0 release? Your call really, feel free to request an exception if you think it's worth it.
Comment 9 Cosimo Cecchi 2012-03-23 13:41:03 UTC
(In reply to comment #8)
> Not sure if this is worth a freeze exception request; maybe we can merge this
> after the 3.4.0 release? Your call really, feel free to request an exception if
> you think it's worth it.

Thanks for the review! I think it's OK to wait after 3.4.0 for this.
Comment 10 Guillaume Desmottes 2012-03-27 11:20:20 UTC
2.4.0 has been released; feel free to merge.
Comment 11 Cosimo Cecchi 2012-03-27 13:16:09 UTC
Attachment 210357 [details] pushed as 8df3bd2 - rounded-rectangle: cairo_set_source_rgba() takes [0..1] arguments
Attachment 210358 [details] pushed as 81f4651 - call-window: use colors from the theme for placeholders