rounded-rectangle: cairo_set_source_rgba() takes [0..1] arguments

And not [0..255] integers.

https://bugzilla.gnome.org/show_bug.cgi?id=672561